--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -11,12 +11,14 @@ dependencies:
     - jupyterlab    # Jupyter Lab environment
     - matplotlib    # 2D plotting library
     - netcdf4       # Wrapper for netcdf4
+    - dask
     - numpy         # N-d array and numerics
     - pandas        # Labeled array library
     - proj4         # geographic projections
     - scipy         # Common math/stats/science functions
     - tqdm          # Nice progress bar for longer computations
     - xarray        # N-d labeled array library
+    - mpi4py
     - esmpy         # explicit, attempt to fix xesmf
     - xesmf         # Geographical regridding based on ESMF
     - regionmask
